--- a/index.html
+++ b/index.html
@@ -12,13 +12,7 @@
         <main>
             <h1>Shelby Burnworth | CIT 261 </h1>
             <h3>To Do: </h3>
-            <ul> 
                 <li>AJAX</li>
-                <li>CSS Animations</li>
-                <li>CSS3 Transforms</li>
-                <li>CSS3 Transitions</li>
-                <li>CSS3 Transitions, animations and transformations</li>
-                <li>CSS3 using JavaScript</li>
                 <li>DOM</li>
                 <li>HTML 5 tags for media</li>
                 <li>JavaScript</li>
@@ -28,7 +22,11 @@
                 <li>Local Storage</li>
             </ul>
             <h3>In Progress</h3>
-            <li><a href="subjects/cssAnimations.html">CSS Animations</a></li>
+            <li><a href="subjects/cssAnimations.html">CSS Animation</a></li>
+            <li><a href="subjects/cssProperties.html">CSS3 Transitions, animations and transformations</a></li>
+            <li><a href="subjects/cssTransform.html">CSS3 Transform</a></li>
+            <li><a href="subjects/cssTransition.html">CSS3 Transition</a></li>
+            <li><a href="subjects/triggerCSS.html">CSS3 Trigger with JavaScript</a></li>
             <h3>Basic</h3>
             <h3>Working</h3>
             <h3>Skilled</h3>
