--- a/index.html
+++ b/index.html
@@ -15,7 +15,6 @@
                 <li>AJAX</li>
                 <li>DOM</li>
                 <li>HTML 5 tags for media</li>
-                <li>JavaScript</li>
                 <li>JavaScript Events</li>
                 <li>JavaScript Objects</li>
                 <li>JSON</li>
@@ -23,6 +22,7 @@
             </ul>
             <h3>In Progress</h3>
             <li><a href="subjects/cssProperties.html">CSS3 Transitions, animations and transformations</a></li>
+            <li><a href="subjects/JavaScript.html">JavaScript</a></li>
             <h3>Basic</h3>
             <li><a href="subjects/cssAnimations.html">CSS Animation</a></li>
             <li><a href="subjects/cssTransition.html">CSS3 Transition</a></li>
