--- a/index.html
+++ b/index.html
@@ -16,13 +16,13 @@
                 <li>DOM</li>
                 <li>HTML 5 tags for media</li>
                 <li>JavaScript Events</li>
-                <li>JavaScript Objects</li>
                 <li>JSON</li>
                 <li>Local Storage</li>
             </ul>
             <h3>In Progress</h3>
             <li><a href="subjects/cssProperties.html">CSS3 Transitions, animations and transformations</a></li>
             <li><a href="subjects/JavaScript.html">JavaScript</a></li>
+            <li><a href="subjects/javascriptObject.html">JavaScript Objects</a></li>
             <h3>Basic</h3>
             <li><a href="subjects/cssAnimations.html">CSS Animation</a></li>
             <li><a href="subjects/cssTransition.html">CSS3 Transition</a></li>
