--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
                 <li>Local Storage</li>
             </ul>
         <h3>In Progress</h3>
-    
+                <li><a href="subjects/html5.html">HTML 5 tags for media</a></li>
         <h3>Basic</h3>
             <li><a href="subjects/cssAnimations.html">CSS Animation</a></li>
             <li><a href="subjects/cssTransition.html">CSS3 Transition</a></li>
