--- a/subjects/jsonAjax.html
+++ b/subjects/jsonAjax.html
@@ -21,7 +21,7 @@
 
         <script type="text/javascript">
             var pageCounter = 1;
-            var animalContainer = document.getElementById("restaurant-info")
+            var foodContainer = document.getElementById("restaurant-info")
             var btn = document.getElementById("btn");
 
             btn.addEventListener("click", function () {
@@ -51,7 +51,7 @@
                     htmlString += '.</p>';
                 }
 
-                animalContainer.insertAdjacentHTML('beforeend', htmlString);
+                foodContainer.insertAdjacentHTML('beforeend', htmlString);
             }
 
         </script>
