--- a/index.html
+++ b/index.html
@@ -12,11 +12,11 @@
         <main>
             <h1>Shelby Burnworth | CIT 261 </h1>
             <h3>To Do: </h3>
-                <li>JavaScript Events</li>
                 <li>Local Storage</li>
             </ul>
         <h3>In Progress</h3>
                 <li><a href="subjects/javascriptObject.html">DOM</a></li>
+                <li><a href="subjects/javascriptObject.html">JavaScript Events</a></li>
                 <li><a href="subjects/jsonAjax.html">AJAX</a></li>
                 <li><a href="subjects/jsonAjax.html">JSON</a></li>
                 <li><a href="subjects/html5.html">HTML 5 tags for media</a></li>
