--- a/index.html
+++ b/index.html
@@ -10,11 +10,9 @@
         <header> 
         </header>
         <main>
-            <h1>Shelby Burnworth | CIT 261 </h1>
-            <h3>To Do: </h3>
-                <li>Local Storage</li>
-            </ul>
+        <h1>Shelby Burnworth | CIT 261 </h1>
         <h3>In Progress</h3>
+                <li><a href="subjects/localStorage.html">Local Storage</a></li>
                 <li><a href="subjects/javascriptObject.html">DOM</a></li>
                 <li><a href="subjects/javascriptObject.html">JavaScript Events</a></li>
                 <li><a href="subjects/jsonAjax.html">AJAX</a></li>
