--- a/index.html
+++ b/index.html
@@ -97,6 +97,7 @@
                     are also many hidden gems. Click below to see my top hidden gem recommendation!</p>
                     <button class="btnHiddenGem" onclick="sdHiddenGem()"><span>Show Me </span></button>
             </div>
+        <iframe width="560" height="315" src="https://www.youtube.com/embed/-KMZW_zwRfc" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 
     </main>
     <footer>
