--- a/index.html
+++ b/index.html
@@ -15,42 +15,32 @@
     </header>
     <main>
         <div id="history">
-            <h2> The History of San Diego</h2>
-            <p>The first European to visit the region was a Spaniard named Juan Rodriguez Cabrillo.
-                In 1542 Cabrillo led an expedition that sailed along the coast of California. So on 27
-                June 1542 Cabrillo set sail from La Navidad in Mexico. On 28 September 1542 Cabrillo anchored
-                in San Diego Bay. However the story of San Diego began in 1769 when the Spanish built a chain
-                of missions across California. Then in 1821 Mexico became independent of Spain. However in 1846
-                the USA annexed California.
+            <h2> Famous San Diego Landmarks</h2>
+            <p><strong> The San Diego Zoo </strong> is one of the top zoos in the world. From monkeys swinging from branch to branch, 
+                to towering giraffes and trumpeting elephants, the San Diego Zoo is home to more than 3,700 rare and endangered 
+                animals and counting. Plus, did you know the zoo is also a botanical garden with over 700,000 types of plants? If this is 
+                your first time at the zoo, it is highly recommended you take a bus tour, included with your pass, to get to see the many amazing 
+                animals that live there. A second zoo, <strong>The San Diego Zoo Safari Park</strong>is another treasure you don’t want to miss. 
+                The 1,800-acre park allows visitors to go on a safari adventure unlike any other. Between the behind-the-scenes
+                experiences and seeing animals in their natural habitats, you’re sure to have a wild time at San Diego Zoo Safari Park.
             </p>
-            <p>In 1850 although San Diego only had a population of several hundred it was incorporated. San Diego
-                slowly developed. Colorado House was built in 1851. Old Point Loma Lighthouse was built in 1855.
-                Whaley House was built in 1856. It was the first two story brick house in California. San Diego
-                grew rapidly in the 1860s. In 1860 San Diego was still a tiny place with a population of only 731.
-                By 1870 it had grown to a town of 2,300. Meanwhile Balboa Park opened in 1868. Old City Hall in
-                San Diego was built in 1874. Then in the 1880s San Diego boomed. Meanwhile in the late 19th century
-                a number of famous buildings were built in San Diego. Llewelyn building was erected in 1887. Also in
-                1887 Villa Montezuma was built. Yuma Building was constructed in 1888. Louis Bank of Commerce was also
-                built in 1888.
+            <p><strong>The Cabrillo National Monument</strong> is a historic monument that commemorates the story of Juan Rodriquez Cabrillo, who
+                arrived at San Diego Bay in Spetember 1542. Upon discovery, Juan Rodriguez Cabrillo actually called the area, “San Miguel”.
+                It wasn’t until 60 years later that the area was named “San Diego” by explorer Sebastian Vizcaino. While at the monument, 
+                you can explore the statue of Juan Rodriguez Cabrillo, learn about his voyage, and gaze out into the ocean from the Old Point Loma lighthouse.
             </p>
-            <p>In the early 20th century San Diego became a major US naval base. However on 21 July 1905 a boiler
-                explosion on board the USS Bennington while it was at San Diego killed 66 men and injured many others.
-                Nevertheless because of the navy San Diego suffered less in the depression of the 1930s than most of
-                the USA. Meanwhile in 1915 San Diego held the Panama-California Exposition. In 1936 the
-                California-Pacific
-                International Exposition was held there. In the early 20th century the population of San Diego boomed.
-                In 1900 the population of San Diego was less than 18,000. By 1940 it had risen to 203,000. In the second
-                half of the 20th century San Diego continued to flourish. Its population rose to 696,000 in 1970.
-                Meanwhile
-                the Maritime Museum was founded in 1948 and a new Public Library was built in San Diego in 1954. Sea
-                World
-                opened in 1964. The Timken Museum of Art opened in 1965. The San Diego-Coronado Bay Bridge opened in
-                1969.
-                San Diego continued to prosper in the late 20th century. Plaza Bonita opened in 1983. Horton Plaza
-                opened in 1984. San Diego Convention Center was built in 1989.
+            <p><strong> The USS Midway Museum </strong> is an authentic U.S. Navy aircraft carrier with over 60 exhibites, self-guided tours,
+                29 restored aircrafts and outstanding ocean views from the flight deck. Visitors will hear stories from Desert Storm pilots and experience
+                life aboard the famous vessel. Daredevils can hop into a flight simulator and "jet off" into the sky. 
             </p>
-            <p>In the 21st century San Diego continued to thrive. Its main industries are defense and tourism. In 2017
-                the population of San Diego was 1.4 million. San Diego is the second largest city in California.</p>
+            <p><strong> Balboa Park </strong> is known as one of the best parks in the world. The park houses 15 museums, performing arts venues, 
+                botanical gardens, cultural and recreational attractions, and the San Diego Zoo. </p>
+            <p><strong>Torrey Pines State Natural Reserve</strong> is one of 16 parks with reserve status. This means that everything in the reserve
+            is exactly as it was before the entire city of San Diego was built. From the calming trails to the incredinle beaches, this natural reserve
+            is one of San Diego's true treasures.</p>
+            <p><strong>Old Town San Diego</strong> is known as the birthplace of California. Here you can learn about San Diego's past, visit local
+                shops or attend a festival. With so much history and fun packed into one neighborhood, it's no wonder why it made the list of top San Diego landmarks. 
+            </p>
         </div>
         <a id="expand">Show More</a>
         <div id="priorities">
