--- a/index.html
+++ b/index.html
@@ -82,10 +82,8 @@
         <div id="placeToSee">
                 <h2>San Diego Hidden Gems</h2>
                 <img id="hiddenGem" src="images/sanDiego.jpg" alt="My Family">
-                <p id="monteCarlo">There is so much to see and do in San Diego. The most popular places are the famous San
-                    Diego Zoo,
-                    Balboa Park, SeaWorld, and of course the miles of sandy beaches with great surf. However, there
-                    are also many hidden gems. Click below to see my top hidden gem recommendation!</p>
+                <p id="monteCarlo">San Diego has many hidden gems that locals love. The secret swings by beachside cliffs, hiking to potato chip rock, 
+                    Spruce Street Suspension Bridge, or the many neighborhood farmer's markets. Click below to see my top hidden gem recommendation!</p>
                     <button class="btnHiddenGem" onclick="sdHiddenGem()"><span>Show Me </span></button>
             </div>
 
